# rustytime

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: rust.yml
migrations/: 0001_init.sql  0002_indexes.sql
src/: cli.rs  db.rs  main.rs  models.rs
src/services/: export.rs  project.rs  report.rs  task.rs  timer.rs  timeutil.rs
