[package]
name = "rustytime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros", "migrate", "uuid", "time"] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = "1.18.0"
