[package]
name = "rustytime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
dirs = "6.0.0"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros", "migrate", "uuid", "time"] }
time = "0.3.41"
time-tz = "2.0.0"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.0", features = ["v7"] }

[build-dependencies]
dirs = "6.0.0"
